# ML-course-project

./: .gitignore  README.md  clean_data.py  example_submission.csv  preprocess_export.py  project-specs.md  pyproject.toml  submission_4_11.csv  submission_cv_run.py  test.csv  train_pipeline.py
.github/workflows/: ci.yml
fall-2026-ml-course-project/: wildlife_strikes_analysis.ipynb
frank_submission(In_Progress)/: AI_GUIDELINES.md  Colab.ipynb  Colab_model.ipynb  EDA.ipynb  README.md  parquet.ipynb  wildlife_strikes_analysis.ipynb  wildlife_strikes_smote_cleaned.csv
frank_submission(In_Progress)/backups/: wildlife_strikes_analysis_scikit.ipynb
frank_submission(In_Progress)/legacy/: wildlife_strikes_analysis_XG+PyT.ipynb
frank_submission(In_Progress)/project_descriptions/: dataset_description.md  project_spec.md  syllabus.md
src/wildlife_strikes/: __init__.py  binarize_cli.py  cleaning.py  config.py  ensemble.py  retune_threshold_cli.py  train_cli.py
submission1/: clean_data.py  score_training.py  submission_4_11_2.csv
tests/: conftest.py  test_binarize_cli.py  test_cleaning.py  test_ensemble_smoke.py  test_ensemble_unit.py  test_train_cli.py
