[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildlife-strikes"
version = "1.0.0"
description = "FAA wildlife strike damage prediction — competition pipeline with CatBoost + LightGBM ensemble"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "catboost>=1.2",
  "lightgbm>=4.0",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]
tune = [
  "optuna>=3.5",
]

[project.scripts]
wildlife-clean = "wildlife_strikes.cleaning:main"
wildlife-train = "wildlife_strikes.train_cli:main"
wildlife-binarize = "wildlife_strikes.binarize_cli:main"
wildlife-retune-threshold = "wildlife_strikes.retune_threshold_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
markers = [
  "slow: optional integration tests (boosting)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
